Support for plurals
The syntax is not exactly convenient, but it seems to work, it is general, and
is consistent with AngularJS.

AngularJS’s $locale is ugly and unfinished, but let’s not invent our own
(at least for now?).

--- a/tests/SpecRunner.html
+++ b/tests/SpecRunner.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>Jasmine Spec Runner</title>
@@ -11,6 +11,7 @@
 
     <script type="text/javascript" src="components/angular/angular.js"></script>
     <script type="text/javascript" src="components/angular/angular-mocks.js"></script>
+    <script type="text/javascript" src="components/angular/i18n/angular-locale_cs-cz.js"></script>
 
     <!-- include source files here... -->
     <script type="text/javascript" src="../src/localize.js"></script>
